Fixed icons for banner. Removed overflow in Navigation.

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
+	margin: 0;
+	padding: 0;
+	max-width: 100%;
+	overflow-x: hidden;
 	background: #171b26;
 }
 .btn {
